Add filter extension (#825)
* feat: add filter extension to conformance

* feat: add cql2 filter extension for POST

* fix: remove commented code, get rid of .only in tes

* feat: cql2 filter extension for GET

* fix: use fully qualified property names

* test: remove redundant test

- decided to not handle filter={}; let it fail

* build: 'npm audit fix' to get CI passing

* feat: check for correct filter-lang and filter-crs

* feat: Add filter extension to aggregate endpoint

* docs: update CHANGELOG

* test: add test for top level field and property in filter extension filter

* review: move constants out of function

* review: stacQlQuery -> stacqlQuery

* review: buildQuery -> buildOpenSearchQuery

* review: Add minimum_should_match = 1 for 'should' clauses

* fix: remove .only from test, update a test comment

* review: remove explicit prefixing of properties object fields

* feat: raise error when collection queryables has additionalProperties set to false

* style: align existing test format

* feat: add query and filter extensions to openapi.yaml

* docs: update README.md

* fix: finish adding filters extension to the OpenAPI spec

* fix: minor changes to query extension in openapi.yaml

* docs: augument CHANGELOG entry, tweak extension list in README

* review: remove bbox from UNPREFIXED_FIELDS

* review: clarify that fields **must not** be prefixed

* review: add deprecated note to Context Extension

* review: Add note about filter expression terms exactly matching Item properties fields

* review: add back bbox and note that bbox and geometry are not yet supported for filtering

* review: add back bbox
